# Mechatronics-I-Assignments

./: README.md
final-project-jst/: README.md  build_to_pi.sh  camera.py  core.py  mic.py  pir.py
final-project-jst/Design/: HomeSecuripy.fzz  left.scad  right.scad
individual-assignment-1-JamesMaloney/report/: results.txt
individual-assignment-2-JamesMaloney/: Cargo.toml
individual-assignment-2-JamesMaloney/report/: IA2.txt
individual-assignment-2-JamesMaloney/src/: main.rs
individual-assignment-3-JamesMaloney/: Cargo.toml  build_to_pi.sh
individual-assignment-3-JamesMaloney/src/: main.rs  stoplight.rs
individual-assignment-4-JamesMaloney/: Cargo.toml  build_to_pi.sh
individual-assignment-4-JamesMaloney/src/: main.rs
individual-assignment-5-JamesMaloney/: Cargo.toml
individual-assignment-5-JamesMaloney/Task_3/: Task_3.ino
individual-assignment-5-JamesMaloney/Task_4/: Task_4.ino
individual-assignment-5-JamesMaloney/Task_5/: Task_5.ino
individual-assignment-5-JamesMaloney/Task_7_8/: Task_7_8.ino
individual-assignment-5-JamesMaloney/Task_9_10/: Task_9_10.ino
individual-assignment-5-JamesMaloney/report/: IA5.fzz
individual-assignment-5-JamesMaloney/src/: Task 3.rs  Task 4.rs  Task 5.rs  Task 8-9.rs  main.rs
individual-assignment-6-JamesMaloney/: Cargo.toml
individual-assignment-7-JamesMaloney/: Cargo.toml  README.md  build_to_pi.sh
individual-assignment-7-JamesMaloney/Task_3/: Task_3.ino
individual-assignment-7-JamesMaloney/src/: datagps.rs  lib.rs  main.rs
individual-assignment-8-JamesMaloney/: Cargo.toml  build_to_pi.sh
individual-assignment-9-JamesMaloney/: Cargo.toml  build_to_pi.sh
lab-2-group-10/: Cargo.toml
lab-2-group-10/src/: Advanced Task 1.rs  (+5 more)
lab-3-group-10/: Cargo.toml
lab-4-group-10/: Cargo.toml
lab-4-group-10/report/: Lab4 - Advanced Task 2.mov
lab-4-group-10/src/: Advanced Task 1.rs  Hard Task 1.rs  Hard Task 2.rs  Main Task 1.rs  Main Task 2.rs  Main Task 4.rs  main.rs
lab-5-group-10/: Cargo.toml  build_to_pi.sh
lab-6-group-10/: Cargo.toml  build_to_pi.sh
lab-7-jst/: Cargo.toml  build_to_pi.sh  log.csv
lab-7-jst/src/: Task 4.rs  datagps.rs  lib.rs  main.rs
lab-8-jst/: Cargo.toml
lab-8-jst/Arduino/Advanced_Task_1/: Advanced_Task_1.ino
lab-8-jst/Arduino/Advanced_Task_1_Alternative/: Advanced_Task_1_Alternative.ino
lab-8-jst/Arduino/Advanced_Task_2/: Advanced_Task_2.ino
lab-8-jst/src/: Hard Task 2 - Second program.rs  Main Task 3-4.rs  main.rs
lab-9-jst/: Cargo.toml  build_to_pi.sh
lab-9-jst/AppInventor/: MechI.aia  MechI.apk
lab-9-jst/report/: Lab9.fzz
lab-9-jst/src/: main.rs
(+43 files in other folders)
