[package]
name = "rust_template"
version = "0.1.0"
authors = ["Giacomo & Silja"]  #CHANGE USER TO YOU
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads1x1x = "0.2.1"
embedded-hal = "0.2.4"
linux-embedded-hal = "0.3.0"
nb = "1.0.0"
rpi_embedded = "0.1.0"
rust_gpiozero = "0.2.0"